--- a/HTML/formulario-login.html
+++ b/HTML/formulario-login.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Formulario HTML</title>
-    <link rel="stylesheet" href="css/estilos.css">
-  </head>
-  <body>
-    <h1>Formulario de registro</h1>
-    <form>
-      <label for="nombre">Nombre:</label>
-      <input type="text" id="nombre" name="nombre" required><br><br>
+<html xmlns:th="http://www.thymeleaf.org">
 
-      <label for="apellido">Apellido:</label>
-      <input type="text" id="apellido" name="apellido" required><br><br>
+<head>
+  <meta charset="UTF-8">
+  <title>Formulario HTML</title>
+  <link rel="stylesheet" href="css/estilos1.css">
+</head>
+<body>
+  <form class="footer__form" action="" method="post">
+    <div class="container">
+      <div class="footer__form-group">
+        <label for="first-name">Nombre:</label>
+        <input type="text" id="first-name" name="first-name" required>
+      </div>
+      <div class="footer__form-group">
+        <label for="last-name">Apellido:</label>
+        <input type="text" id="last-name" name="last-name" required>
+      </div>
+      <div class="footer__form-group">
+        <label for="email">Correo electrónico:</label>
+        <input type="email" id="email" name="email" required>
+      </div>
+      <div class="footer__form-group">
+        <button type="submit">Enviar</button>
+      </div>
+    </div>
+  </form>
 
-      <label for="correo">Correo electrónico:</label>
-      <input type="email" id="correo" name="correo" required><br><br>
+</body>
 
-      <label for="contrasena">Contraseña:</label>
-      <input type="password" id="contrasena" name="contrasena" required><br><br>
-
-      <input type="submit" value="Enviar">
-    </form>
-  </body>
 </html>
