--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <a class="logo" href="index.html"><img src="img/ALKACEN.png" width="130px" alt="logo"></a>
+        <a class="footer__logo" href="index.html"><img src="img/ALKACEN.png" width="130px" alt="logo"></a>
         <nav>
             <ul class="nav__links">
                 <li><a href="index.html">Inicio</a></li>
